tests/NormalTests/paczka1/small_fuzzy/99709355.err
Error in line 2: 158W668A0 S292 32,4
Error in line 4: 158W668A0 A484 15,0
Error in line 15: D86EjQCo4K9 A484 95,5
